Fix up cards spacing and font

--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,6 @@ footer>div:nth-of-type(2) div > ul > li a {
 
 main .section-wrapper > div {
     margin: auto;
-    padding: 16px;
 }
 
 main a:any-link {
